--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "script.js": "~2.5.7",
     "jquery": "^3.1.1",
     "chart.js": "^2.3.0",
-    "angular-chart.js": "^1.0.3"
+    "angular-chart.js": "^1.0.3",
+    "google-chart": "^1.1.1"
   },
   "description": "Frontend para checkbox",
   "ignore": [
